--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,11 @@
             <form action="/login" method="post">
                 <input type="text" id="email" placeholder="email">
                 <input type="text" id="password" placeholder="password">
-                <input type="hidden" id="token" name="token">
+                <label>
+                    Token: 
+                    <br />
+                    <textarea id="token" name="token"></textarea>
+                </label>
                 <input type="submit" value="log in" id="submit">
             </form>
         </div>
