--- a/views/index.html
+++ b/views/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="container">
             <h2>Registered Users</h2>
-            <form action="/login" method="post">
+            <form action="/auth" method="post">
                 <input type="text" id="email" placeholder="email">
                 <input type="text" id="password" placeholder="password">
                 <label>
